--- a/project_v9.91 (32).json
+++ b/project_v9.91 (32).json
@@ -2,7 +2,7 @@
   "export_type": "project",
   "projects": [
     {
-      "id": "110ef442-72a8-4a98-8afa-c195df78f5d6",
+      "id": "110ef442-72a8-4a98-8afa-c195,
       "name": "v9.91",
       "config": {
         "channel": "@tim",
